fix to the front title
Because
- Used a carousal which was never utilized so in this change it was replaced with a much simpler method
- Fix the title being off screen, and also remove the squashed title look on the edges on mobile phones

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,28 @@
 .a-light-color {
   color: $background-light;
 }
+
+.headImage{
+  width: 100%;
+  height: 750px;
+  object-fit: cover;
+  object-position: 40%
+}
+
+.headContainer {
+  position: relative;
+  text-align: center;
+  color: $background-light;
+}
+
+.centered {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 80%;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
